2006-08-25  Gary Thomas  <gary@mlbassoc.com>

	* cdl/infra.cdl: 
	CYGNUM_INFRA_EMPTY_DELETE_THRESHOLD must be 'data', not 'boolean'

2006-05-17  David Vrabel <dvrabel@arcom.com>
 
	* include/cyg_type.h: #define CYG_NELEM to calculate the
 	number of elements in a (statically allocated) array.
 
2006-05-08  Sergei Gavrikov <sg@belvok.com>
	
	* src/buffer.cxx: Fix the compiler warnings.

2005-11-04  Bart Veer <bartv@ecoscentric.com>
	
	* tests/cxxsupp.cxx: Fix the compiler warnings.

2005-10-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/delete.cxx: 
	* cdl/infra.cdl: Count the number of calls to delete when
	INFRA_DEBUG is enabled. If the threshold is exceeded it probably
	means the user expects a real delete function, not the empty one.
	
2005-10-12  Laurent Gonzalez  <laurent.gonzalez@trango-systems.com>

	* src/simple.cxx (cyg_check_func_ptr): match the implementation to
	the prototype. This got forgotten in the last patch.
	
2005-07-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/cyg_ass.h: Fixed a function prototype so that
	gcc4 does not give warnings. A const void makes no sense.
	* src/*.cxx (cyg_check_func_ptr): match the implementation to the
	prototype.

2005-06-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/cyg_type.h: Added CYGBLD_ATTRIB_USED so that we can
	indicate to gcc 3.4.4 or above not to throw away a variable or
	function even when it appears to be not references.
	
2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/diag.h: Added CYGBLD_ATTRIB_PRINTF_FORMAT where
	appropriate to get the compiler to do more checking.
	* src/diag.cxx (diag_dump_buf_with_offset_16bit): Fix compiler warning
	caused by above change.

2005-02-08  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/diag_sprintf1.c 
	* tests/diag_sprintf2.c
	* cdl/infra.cdl: Used the sprintf test from libc to test 
	  diag_sprintf.

2005-02-08  Christoph Csebits <Christoph.CSEBITS@frequentis.com>

	* src/diag.cxx (diag_snprintf): Off by one error could cause the